--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Raleway:wght@300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
 
 * {
   margin: 0;
@@ -8,7 +8,7 @@
   border: none;
   outline: none;
   scroll-behavior: smooth;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 :root {
@@ -525,7 +525,7 @@ span {
 	content: '';
 	animation: gerak infinite 10s ease;
 	transform: translateY(-50%);
-	color: #98FB98;
+	color: lightyellow;
 	font-size: 50px;
 }
 
