--- a/css/about_style.css
+++ b/css/about_style.css
@@ -1,60 +1,114 @@
-body {
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0;
-    padding: 0;
+/* Change colors here */
+:root {
+    --bg-color: #1f242d;
+    --bg-brighter: #323946;
+    --text-color: #fff;
+    --icon-color: #0ef;
 }
 
-header {
-     background-color: #333;
-    color: #fff;
-    padding: 10px;
-    text-align: center;
-    position: relative;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: auto;
+@keyframes fade-in-opacity {
+    0% { opacity: 80% ;}
+    100% { opacity: 40%; }
 }
 
-h1 {
-    margin: 0;
+@keyframes fade-out-opacity {
+    0% { opacity: 40%; }
+    100% { opacity: 80%; }
 }
 
-main {
-    margin: 20px;
+html {
+    background-color: var(--bg-color);
+    color: var(--text-color);
+    font-family: 'Roboto', sans-serif;
 }
 
-section {
-    margin-bottom: 30px;
-    background-color: rgb(0, 170, 147);
-    margin: auto;
-    padding: 5px 5px 5px 5px;
+#center {
+    background-color: var(--bg-brighter);
+    padding: 3em;
+    padding-bottom: 0.4em;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    position: absolute;
+    width: 65vw;
 }
 
-h2 {
-    color: #333;
+
+#links i {
+    margin-top: 0.4em;
+    margin-left: 0.8em;
+    padding: 25px;
 }
 
-img {
-    width: 200px;
-    height: 200px;
-    border-radius: 100%;
-    margin-bottom: 10px;
+#about {
+    text-align: left;
+    line-height: 1.3em;
+    color: antiquewhite;
 }
 
-ul {
-    list-style-type: disc;
-    margin-left: 20px;
+#logo {
+    margin: 3em;
+    max-height: 12em;
+}
+
+a {
+    color: var(--icon-color);
+    opacity: 0%;
+    animation: fade-out-opacity 0.5s ease forwards;
+}
+
+a:hover {
+    color: var(--icon-color);
+    animation: fade-in-opacity 0.5s ease forwards;
 }
 
 footer {
-    background-color: #333;
-    color: #fff;
-    padding: 10px;
-    text-align: center;
-    position: relative;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: auto;
+    margin-top: 6em;
+    font-size: 0.8em;
+    font-family: 'Roboto', sans-serif;
+    color: antiquewhite;
+}
+
+[grayscale] {
+    filter: grayscale(100);
+}
+
+@media only screen and (max-width: 900px) {
+    #center {
+        left: 0;
+        top: 0;
+        transform: translate(0, 0);
+        width: 87vw;
+        padding: 1em;
+        margin: 1em;
+        position: relative;
+    }
+
+    #logo {
+        margin: 0;
+        margin-bottom: 2em;
+    }
+
+    #links i {
+        margin: 0 !important;
+        margin-bottom: 0.3em;
+        display: block;
+    }
+}
+
+@media only screen and (min-width: 900px) and (max-width: 1152px) {
+    #center {
+        left: 0;
+        top: 0;
+        transform: translate(0, 0);
+        width: 65vw;
+        margin: 1em;
+        position: relative;
+    }
+    
+    #links i {
+        margin: 0 !important;
+        margin-bottom: 0.3em;
+        display: block;
+    }
 }
