--- a/css/about_style.css
+++ b/css/about_style.css
@@ -1,4 +1,4 @@
-/* Change colors here */
+
 :root {
     --bg-color: #1f242d;
     --bg-brighter: #323946;
@@ -36,7 +36,7 @@ html {
 
 #links i {
     margin-top: 0.4em;
-    margin-left: 0.8em;
+    margin-left: 0.9em;
     padding: 25px;
 }
 
@@ -66,7 +66,7 @@ footer {
     margin-top: 6em;
     font-size: 0.8em;
     font-family: 'Roboto', sans-serif;
-    color: antiquewhite;
+    color: #fff;
 }
 
 [grayscale] {
