--- a/css/style.css
+++ b/css/style.css
@@ -535,7 +535,7 @@ span {
     font-size: 30px;
 	}
 	50% {
-		content: 'at Work Aboourd Academy';
+		content: 'at Work Aboard Academy';
     font-size: 30px;
 	}
 	100% {
